--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://ujeon.github.io/portfolio/"
+  "homepage": "http://ujeon.me/"
 }
