:lipstick: Update entire design

--- a/src/data/projectData.json
+++ b/src/data/projectData.json
@@ -1,30 +1,62 @@
 [
   {
     "projectName": "우리튜브",
+    "projectName_en": "uritube",
     "image": "uritube",
+    "img_width": "100%",
     "url": "https://medium.com/@wj9304/%EC%B2%AB-%EB%B2%88%EC%A7%B8-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A5%BC-%EB%8F%8C%EC%95%84%EB%B3%B4%EB%A9%B0-653734c49f7b",
-    "description": "관심 주제의 동영상을 시청하고, 사용자들끼리 이야기할 수 있는 웹사이트입니다.",
-    "date": "2019년 09월"
+    "description": "우리튜브는 관심 주제의 동영상을 시청하고, 사용자들끼리 이야기할 수 있는 웹사이트입니다.",
+    "date": "2019년 09월",
+    "tech_stack": "React / Node.js / AWS",
+    "roll": "Back-end",
+    "related_img": "https://images.unsplash.com/photo-1565870100382-f0a510db3cd1?ixlib=rb-1.2.1&auto=format&fit=crop&w=2689&q=80",
+    "primary_color": "#96523c",
+    "secondary_color": "#dbdddd",
+    "next_project": ["secondhand", "세컨핸드"]
   },
   {
     "projectName": "세컨핸드",
+    "projectName_en": "secondhand",
     "image": "secondhand",
+    "img_width": "60%",
     "url": "https://medium.com/@wj9304/%EB%91%90-%EB%B2%88%EC%A7%B8-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A5%BC-%EB%8F%8C%EC%95%84%EB%B3%B4%EB%A9%B0-f8c410f4bebf",
-    "description": "중고 유모차 거래자들이 합리적인 가격결정을 할 수 있도록 가격정보를 제공하는 서비스입니다.",
-    "date": "2019년 10월"
+    "description": "세컨핸드는 중고 유모차 거래자들이 합리적인 결정을 할 수 있도록 가격 정보를 제공하는 서비스입니다.",
+    "date": "2019년 10월",
+    "tech_stack": "React Native / Django / AWS",
+    "roll": "Front-end & Back-end",
+    "related_img": "https://images.unsplash.com/photo-1516382686263-779707ed2896?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
+    "primary_color": "#6d98a6",
+    "secondary_color": "#98b8bb",
+    "next_project": ["gdflower", "금화푸드 재고관리"]
   },
   {
     "projectName": "금화푸드 재고관리",
+    "projectName_en": "gdflower",
     "image": "gdflower",
+    "img_width": "100%",
     "url": "",
-    "description": "베이커리 업체의 재고조회, 관리를 돕는 웹사이트입니다.",
-    "date": "2019년 11월 ~"
+    "description": "금화푸드 베이커리 직원들의 재고조회, 관리 업무를 돕는 웹사이트입니다.",
+    "date": "2019년 11월 ~",
+    "roll": "Front-end & Back-end",
+    "tech_stack": "React / GraphQL / AWS",
+    "related_img": "https://images.unsplash.com/photo-1509440159596-0249088772ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1652&q=80",
+    "primary_color": "#331809",
+    "secondary_color": "#89532b",
+    "next_project": ["misinterpreter", "오역자들"]
   },
   {
     "projectName": "오역자들",
+    "projectName_en": "misinterpreter",
     "image": "misinterpreter",
+    "img_width": "100%",
     "url": "https://misinterpriter.com",
-    "description": "주 1회 영문 기술 블로그를 번역하는 스터디입니다.",
-    "date": "2019년 11월 ~"
+    "description": "오역자들은 주 1회 영문 기술 블로그를 번역하고, 스터디 동료 간 서로 공유할 수 있는 웹사이트입니다.",
+    "date": "2019년 11월 ~",
+    "tech_stack": "React / TypeScript / Netlify",
+    "roll": "Article translation and Front-end",
+    "related_img": "https://images.unsplash.com/photo-1453748866136-b1dd97284f49?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1605&q=80",
+    "primary_color": "#8d9ab4",
+    "secondary_color": "#d2cad0",
+    "next_project": ["uritube", "우리튜브"]
   }
 ]
