--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/crypto-js": "^3.1.43",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -13,6 +14,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.1",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "gh-pages": "^2.1.1",
     "node-sass": "^4.13.1",
@@ -21,19 +23,21 @@
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "predeploy": "yarn build",
+    "predeploy": "yarn build && npm run sitemap",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "postbuild": "react-snap",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile:sass": "node-sass ./src/sass/main.scss ./src/css/style.css -w"
+    "compile:sass": "node-sass ./src/sass/main.scss ./src/css/style.css -w",
+    "sitemap": "babel-node ./src/sitemap/sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,6 +56,10 @@
   },
   "homepage": " https://ujeon.me/",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "react-snap": "^1.23.0"
   }
 }
