:sparkles: Add project document url

--- a/src/data/projectData.json
+++ b/src/data/projectData.json
@@ -34,7 +34,7 @@
     "projectName_en": "gdflower",
     "image": "gdflower",
     "img_width": "100%",
-    "url": "",
+    "url": "https://medium.com/@wj9304/%EC%84%B8-%EB%B2%88%EC%A7%B8-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A5%BC-%EB%8F%8C%EC%95%84%EB%B3%B4%EB%A9%B0-3f14bf7cfa80",
     "description": "금화푸드 베이커리 직원들의 재고조회, 관리 업무를 돕는 웹사이트입니다.",
     "date": "2019년 11월 ~",
     "roll": "Front-end & Back-end",
