--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "predeploy": "yarn build && npm run sitemap",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts start --history-api-fallback",
     "postbuild": "react-snap",
     "build": "react-scripts build",
     "test": "react-scripts test",
