--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://ujeon.me",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
